= Version History =
x.x:
- fixed: PHP errors on old function for videolist dimensions
- fixed: PHP error in pages history annotation

2.1 (2013-04-05):
- changed: made compatible with Elgg 1.8.14

2.0 (2012-07-12):

- added: support for videolist widget
- fixed: admin newest users widget

2.0 beta(2012-05-14)

- first release for Elgg 1.8